syntax = "proto3";

package calculator;

option go_package = "github.com/wassup-chicken/grpc-exercise-1/calculator/proto";

message SumRequest {
    int32 first_num = 1;
    int32 second_num = 2;
}

message SumResponse {
    int32 result = 1;
}